Location Manager Delegate Methods new functions

--- a/Clima-App/View/Base.lproj/Main.storyboard
+++ b/Clima-App/View/Base.lproj/Main.storyboard
@@ -94,6 +94,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" image="left"/>
+                                <connections>
+                                    <segue destination="BZL-NM-Mer" kind="presentation" id="Apy-EK-urX"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q29-84-M6X">
                                 <rect key="frame" x="12" y="186" width="351" height="30"/>
